[package]
name = "recovery-derive"
version = "0.1.6"
edition = "2024"
license = "MIT"
homepage = "https://github.com/popen2/recovery-rs"
description = "Trait and derive macros to declare how errors should be retried"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"
