[package]
name = "recovery"
version = "0.1.4"
edition = "2024"
license = "MIT"
homepage = "https://github.com/popen2/recovery-rs"
description = "Trait and derive macros to declare how errors should be retried"
readme = "../README.md"

[dependencies]
recovery-derive = { path = "../recovery-derive", version = "0.1.4" }
